# memflow-cli

memflow-cli/: Cargo.toml
memflow-daemon/: Cargo.toml
memflow-daemon-connector/: Cargo.toml
memflow-daemon-connector/examples/: read_phys.rs
memflow-daemon-connector/src/: lib.rs
memflow-daemon/src/: config.rs  dispatch.rs  main.rs  state.rs
memflow-daemon/src/commands/: connection.rs  gdb.rs  phys_mem.rs
memflow-daemon/src/commands/fuse/: filesystem.rs
memflow-daemon/src/commands/fuse/filesystem/: scopes.rs
memflow-daemon/src/commands/fuse/filesystem/scopes/: connection.rs  module.rs  process.rs
memflow-daemon/src/commands/gdb/: stub.rs
memflow-daemon/src/dto/: request.rs  response.rs
