[package]
name = "memflow-daemon-connector"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
license = "MIT"
description = "daemon remote connector for the memflow physical memory introspection framework"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-cli"
readme = "README.md"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { git = "https://github.com/memflow/memflow", branch = "next", features = ["inventory"] }
memflow-daemon = { path = "../memflow-daemon" }
log = { version = "0.4", default-features = false }
simple_logger = "1.0"
url = "2.1"

#tokio
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4", features = ["full"] }
tokio-serde = "0.6"
bytes = "0.5"
futures = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1"

[dev-dependencies]
clap = "2.33.0"

[features]
default = []
inventory = []

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"
